# vpn-manager-api-cpp

./: .clangd  .gitignore  .gitingore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
configs/: static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db-1.sql
src/: constants.hpp  main.cpp
src/handlers/v1/key/create-key/: view.cpp  view.hpp
src/handlers/v1/key/get-by-id/: view.cpp  view.hpp
src/handlers/v1/key/get-by-name/: view.cpp  view.hpp
src/handlers/v1/user/create-user/: view.cpp  view.hpp
src/handlers/v1/user/get-by-username/: view.cpp  view.hpp
src/helpers/: datetime_helper.cpp  datetime_helper.hpp  email_helper.cpp  email_helper.hpp  jwt_helper.hpp  phone_helper.cpp  phone_helper.hpp  string_convertible_checker.hpp  uuid_parser.hpp
src/middlewares/: http_middleware.hpp  jwt_middleware.hpp
src/models/: exception.hpp  key_dto.hpp  response.hpp  user_dto.hpp
src/repositories/key_repository/: key_repository.cpp  key_repository.hpp
src/repositories/user_repository/: user_repository.cpp  user_repository.hpp
tests/: conftest.py  test_basic.py  test_user_handler.py
tests/key-handler/: test_create_key.py  test_get_key_by_id.py  test_get_key_by_name.py
tests/user-handler/: test_create_user.py  test_get_user_by_username.py
